# brm

./: .gitignore  CMakeLists.txt  build.sh
include/: config.h  logger.h  queue.h  runner.h  scheduler.h  strategy.h  system.h  typedefs.h  utils.h
src/: brm.cpp  config.cpp  runner.cpp  scheduler.cpp  strategy.cpp  utils.cpp
test/: CMakeLists.txt  config_test.cpp  logger_test.cpp  scheduler_test.cpp  strategy_test.cpp  utils_test.cpp
test/res/: test_config.json
